 * Enh #3620: Redesigned filter interface.
 * Enh #3633: Experimental support for MSSQL, PgSQL and other databases using ADODB.
 * Enh #3662: Provide more config vars to control viewing/downloading/deleting bug attachments.
 * Enh #3663: Remember filter settings for each project.
 * Enh #3688: Add threshold for changing the bug/bugnote view status.
 * Enh #3690: Request for directly setting reminders private.
 * Enh #3713: Allow users to set severity levels along with email preferences.
 * Enh #3735: New CSS class for HTML Form Buttons
 * Enh #3801: Add "myself" meta filter options.
 * Fix #3094: Switching projects clears filter values.
 * Fix #3259: Saving CSV file of bugs containning double quotes causes invalid csv.
 * Fix #3397: Delete notification should be off when deleting a project.
 * Fix #3622: Tweak attachment SQL in print bug pages.
 * Fix #3629: Duplicate Error ID.
 * Fix #3635: status_resolved in email_api should be resolved.
 * Fix #3641: 'Date submited' in reports is always '12-31-69'.
 * Fix #3646: Error in core/obsolete.php.
 * Fix #3691: Parse error in Romanian localisation.
 * Fix #3723: No ability to edit or even delete news is associated project was deleted.
 * Fix #3728: CSV export shows &quot; instead of real quotes in bug title.
 * Fix #3795: Resolve should not overwrite handler, if already set.
 * New Config: set_view_status_threshold (default REPORTER) - threshold needed to set the view status while reporting a bug / bugnote.
 * New Config: change_view_status_threshold (default UPDATER) - threshold needed to update the view status while updating a bug / bugnote.
 * New Config: view_handler_threshold (default VIEWER) - threshold needed to view the bug handler (now works for emails only).
 * New Config: view_history_threshold (default VIEWER) - threshold needed to view the bug history (now works for emails only).